Add: Install JaCoCoMavenPlugin.